[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Resources/Img/Items/bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 0.5 )

[node name="Bullet" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletTimeout" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="BulletTimeout" to="." method="_on_Bullet_timeout"]
